# rust-hft-trading-engine

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
benches/: order_matching.rs
examples/: advanced_trading.rs
src/: lib.rs  main.rs
src/engine/: matching_engine.rs  mod.rs
src/models/: market_data.rs  mod.rs  order.rs  orderbook.rs  trade.rs
src/risk/: mod.rs  risk_manager.rs
tests/: test_main.rs
